Fixed alignment of right column.

--- a/web/src/main/webapp/resources/css/atsy.css
+++ b/web/src/main/webapp/resources/css/atsy.css
@@ -177,10 +177,6 @@ textarea {
     margin-left: 20px;
 }
 
-#drop{
-    margin-top:10px;
-}
-
 #dropSource{
     margin-top:10px;
 }
